--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body{
   text-align: center;
   color: #ffffff;
 }
+.highlight{
+  color: #ffffff;
+  font-weight: bold;
+}
 ul.dish li {
   position: relative;
   padding: 0;
@@ -19,32 +23,60 @@ ul.dish li {
 .one1{
   margin: 0px;
   text-align: center;
+  width: 350px;
+  height: 105px;
+  background-color: #b7b1af;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration-color: #ffffff;
 
 }
 .two{
   margin-bottom: 0;
   text-align: center;
+  width: 380px;
+  height: 105px;
+  background-color: #f7511a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
+
+
 .dinner{
   margin: 0;
-  min-height: 300px;
+  width: 340px;
+  height: 210px;
   background: url('../ip2/assets/foodtop/dinner.jpg') no-repeat;
-  background-color: ffffff;
+  color: #ffffff;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: large;
 }
 .lunch{
-  min-height: 300px;
+  width: 350px;
+  height: 210px;
+  color: #ffffff;
   background: url('../ip2/assets/foodtop/lunch.jpg') no-repeat;
-  background-color: ffffff;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: large;
+  text-align: center;
+
 }
 .breakfast{
-  min-height: 300px;
+  width: 350px;
+  height: 210px;
   background: url('../ip2/assets/foodtop/breakfast.jpg') no-repeat;
-  background-color: ffffff;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   font-size: large;
 }
@@ -79,21 +111,3 @@ footer {
   background-color: #e8491d;
   text-align: center;
 }
-/*.box{
-  background-color: lightgrey;
-  width: 20%;
-  height: 100px;
-  border: 1px solid lightgey;
-  text-align: center;
-  float: left;
-
-}
-.box2{
-  background-color: lightgrey;
-  width: 20%;
-  height: 100px;
-  border: 1px solid lightgey;
-  text-align: center;
-  float: left;
-
-}*/
